--- a/src/app/chuck/componentes/verfrase/verfrase.component.html
+++ b/src/app/chuck/componentes/verfrase/verfrase.component.html
@@ -6,7 +6,7 @@
     </mat-card-header>
     <img mat-card-image src="../../../../assets/img/chuck-norris.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
-      <p>{{ frase.value }}</p>
+      <p class="quote">"{{ frase.value }}"</p>
     </mat-card-content>
     <mat-card-actions>
       <button mat-button>LIKE</button>
