Sets alt text of Chuck's photo

--- a/src/app/chuck/componentes/verfrase/verfrase.component.html
+++ b/src/app/chuck/componentes/verfrase/verfrase.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>Chuck Norris Quotes</mat-card-title>
       <mat-card-subtitle>@ChuckNorrisQuotes</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image src="../../../../assets/img/chuck-norris.jpg" alt="Photo of a Shiba Inu">
+    <img mat-card-image src="../../../../assets/img/chuck-norris.jpg" alt="Photo of the great Chuck Norris">
     <mat-card-content>
       <p class="quote">"{{ frase.value }}"</p>
     </mat-card-content>
